--- a/README.adoc
+++ b/README.adoc
@@ -6,48 +6,28 @@ Zaawansowane języki programowania
 *Środowisko pracy*
 
 [options="header"]
-|========================================================
-| L.P.  | Nazwa         | Typ
-| 1     | Linux Xubuntu | System operacyjny
-| 2     | Bash          | Powłoka systemowa UNIX
-| 3     | GitHub        | Hostingowy serwis (Git)
-| 4     | Atom          | Edytor tekstu, kodu źródłowego
-| 5     | Java          | Obiektowy język programowania
-|========================================================
+|================================================
+| Nazwa         | Typ
+| Linux Xubuntu | System operacyjny
+| Bash          | Powłoka systemowa UNIX
+| GitHub        | Hostingowy serwis (Git)
+| Atom          | Edytor tekstu, kodu źródłowego
+| Java          | Obiektowy język programowania
+|================================================
 
-*Narzędzia*
+*Narzędzia dla języka Java*
 
 [options="header"]
-|========================================================
-| L.P.  | Nazwa      | Link
-| 1     | checkstyle | http://checkstyle.sourceforge.net/
-| 2     | ckjm       | https://www.spinellis.gr/sw/ckjm/
-| 3     | PMD        | https://pmd.github.io/
-| 4     | Sonar      | https://www.sonarsource.com/
-|========================================================
-
-Szczegółowy opis powyższych komponentów
----------------------------------------
-
-* *checkstyle* - checking Java source code
-for adherence to a Code Standard or set of
-validation rules (best practices).
-
-* *ckjm* - calculates Chidamber and Kemerer
-object-oriented metrics by processing the bytecode
-of compiled Java files.
-
-* *PMD* - PMD is a source code analyzer.
-It finds common programming flaws like unused
-variables, empty catch blocks, unnecessary
-object creation, and so forth.
-
-* *Sonar* - SonarSource delivers what is probably
-the best static code analyzer you can find on the market
-for Java.
+|==============================================================================
+| Narzędzie  | Link                               | Opis
+| checkstyle | http://checkstyle.sourceforge.net/ | Checking Java source code for adherence to a Code Standard or set of validation rules (best practices).
+| ckjm       | https://www.spinellis.gr/sw/ckjm/  | Calculates Chidamber and Kemerer object-oriented metrics by processing the bytecode of compiled Java files.
+| Sonar      | https://www.sonarsource.com/       | SonarSource delivers what is probably the best static code analyzer you can find on the market for Java.
+|==============================================================================
 
 Przydatne linki
 ---------------
 
 * https://github.com/mre/awesome-static-analysis
 * https://sonarcloud.io
+* https://pmd.github.io/
