--- a/README.adoc
+++ b/README.adoc
@@ -32,6 +32,74 @@ Przydatne linki
 Testowanie metryk CKJM
 ----------------------
 
+RFC.java
+
+[source,java]
+-----------------
+import java.util.*;
+
+public class RFC
+{
+  public static void main(String[] args)
+  {
+      ArrayDeque ad = new ArrayDeque();
+      ArrayList al = new ArrayList();
+      BitSet bs = new BitSet();
+      HashMap hm = new HashMap();
+      HashSet hs = new HashSet();
+      Hashtable ht = new Hashtable();
+      IdentityHashMap ihm = new IdentityHashMap();
+      LinkedHashMap lhm = new LinkedHashMap();
+      LinkedHashSet lhs = new LinkedHashSet();
+      LinkedList ll = new LinkedList();
+      String s = new String();
+      Random r = new Random();
+      RFC hw = new RFC();
+      Stack st = new Stack();
+      Timer t = new Timer();
+      TreeMap tm = new TreeMap();
+      TreeSet ts = new TreeSet();
+      Vector v = new Vector();
+
+      System.exit(0);
+  }
+}
+-----------------
+
+--------------------
+RFC 2 1 0 0 21 1 0 2
+--------------------
+
+LCOM.java
+
+[source,java]
+-----------------
+public class LCOM
+{
+  public static void method01() {};
+  public static void method02() {};
+  public static void method03() {};
+  public static void method04() {};
+  public static void method05() {};
+  public static void method06() {};
+  public static void method07() {};
+  public static void method08() {};
+  public static void method09() {};
+  public static void method10() {};
+
+  public static void main(String[] args)
+  {
+
+  }
+}
+-----------------
+
+------------------------
+LCOM 12 1 0 0 13 66 0 12
+------------------------
+
+*Podsumowanie*
+
 [options="header"]
 |===========================================================
 | Plik       | WMC | DIT | NOC | CBO | RFC | LCOM | Ca | NPM
