--- a/README.adoc
+++ b/README.adoc
@@ -33,14 +33,44 @@ Przydatne linki
 Złożoność cyklomatyczna
 -----------------------
 
-include::helper/cyclomatic_complexity01[]
+*Złożoność cyklomatyczna* – metryka oprogramowania opracowana przez
+Thomasa J. McCabe'a w 1976, używana do pomiaru stopnia skomplikowania
+programu. Podstawą do wyliczeń jest liczba dróg w schemacie blokowym
+danego programu, co oznacza wprost liczbę punktów decyzyjnych w tym
+programie. Ponadto są uwzględniane tzw. skojarzenia odśrodkowe
+(ang. efferent couplings) oraz dośrodkowe (ang. afferent couplings).
+W rezultacie wyznaczana jest niestabilność.
 
 *Przykład nr 1:* dużo konstrukcji if-else
 
 .ExampleClass01.java
 [source,java]
 -----------------
-include::src/ExampleClass01.java[]
+class ExampleClass01
+{
+  public static int wtf_maker(int a, int b, int c)
+  {
+    if (a >= 0 && b >= 0 && c >= 0)
+    {
+      if (a == 0 && b == 0 && c == 0) return 0;
+      else wtf_maker(a-1, b-1, c-1);
+    }
+    else if (a >= 0 && b >= 0 && c < 0) wtf_maker(a-1, b-1, c+1);
+    else if (a >= 0 && b < 0 && c >= 0) wtf_maker(a-1, b+1, c-1);
+    else if (a >= 0 && b < 0 && c < 0) wtf_maker(a-1, b+1, c+1);
+    else if (a < 0 && b >= 0 && c >= 0) wtf_maker(a+1, b-1, c-1);
+    else if (a < 0 && b >= 0 && c < 0) wtf_maker(a+1, b-1, c+1);
+    else if (a < 0 && b < 0 && c >= 0) wtf_maker(a+1, b+1, c-1);
+    else if (a < 0 && b < 0 && c < 0) wtf_maker(a+1, b+1, c+1);
+    else if (a == 0 && b == 0 && c == 0) return 0;
+    return 0;
+  }
+
+  public static void main (String[] args)
+  {
+    wtf_maker(10, 20, 30);
+  }
+}
 -----------------
 
 image::screenshots/lizard01.png[]
@@ -50,9 +80,34 @@ image::screenshots/lizard01.png[]
 .ExampleClass02.java
 [source,java]
 -----------------
-include::src/ExampleClass02.java[]
+class ExampleClass02
+{
+  public static int wtf_maker(int a, int b, int c)
+  {
+    if (a > 0) { if (b > 0) wtf_maker(a-1,b-1,c); if (c > 0) wtf_maker(a-1,b,c-1); }
+    else if (b > 0) { if (a > 0) wtf_maker(a-1,b-1,c); if (c > 0) wtf_maker(a,b-1,c-1); }
+    else if (c > 0) { if (a > 0) wtf_maker(a-1,b,c-1); if (b > 0) wtf_maker(a,b-1,c-1); }
+
+    if (a < 0) { if (b < 0) wtf_maker(a+1,b+1,c); if (c < 0) wtf_maker(a+1,b,c+1); }
+    else if (b < 0) { if (a < 0) wtf_maker(a+1,b+1,c); if (c < 0) wtf_maker(a,b+1,c+1); }
+    else if (c < 0) { if (a < 0) wtf_maker(a+1,b,c+1); if (b < 0) wtf_maker(a,b+1,c+1); }
+
+    if (a == 0 && b == 0 && c == 0) return 0;
+    return 0;
+  }
+
+  public static void main (String[] args)
+  {
+    wtf_maker(10, 20, 30);
+  }
+}
 -----------------
 
 image::screenshots/lizard02.png[]
 
-include::helper/cyclomatic_complexity02[]
+Przytaczane są poniższe wartości złożoności cyklomatycznej:
+
+* *od 1 do 10* – kod dość prosty stwarzający nieznaczne ryzyko,
+* *od 11 do 20* – kod złożony powodujący ryzyko na średnim poziomie,
+* *od 21 do 50* – kod bardzo złożony związany z wysokim ryzykiem,
+* *powyżej 50* – kod niestabilny grożący bardzo wysokim poziomem ryzyka.
