Poprawienie prezentacji WTFCode.

--- a/README.adoc
+++ b/README.adoc
@@ -41,7 +41,7 @@ programie. Ponadto są uwzględniane tzw. skojarzenia odśrodkowe
 (ang. efferent couplings) oraz dośrodkowe (ang. afferent couplings).
 W rezultacie wyznaczana jest niestabilność.
 
-*Przykład nr 1:* dużo konstrukcji if-else
+*Przykład:*
 
 .ExampleClass01.java
 [source,java]
@@ -50,17 +50,13 @@ class ExampleClass01
 {
   public static int wtf_maker(int a, int b, int c)
   {
-    if (a >= 0 && b >= 0 && c >= 0)
-    {
-      if (a == 0 && b == 0 && c == 0) return 0;
-      else wtf_maker(a-1, b-1, c-1);
-    }
-    else if (a >= 0 && b >= 0 && c < 0) wtf_maker(a-1, b-1, c+1);
-    else if (a >= 0 && b < 0 && c >= 0) wtf_maker(a-1, b+1, c-1);
-    else if (a >= 0 && b < 0 && c < 0) wtf_maker(a-1, b+1, c+1);
-    else if (a < 0 && b >= 0 && c >= 0) wtf_maker(a+1, b-1, c-1);
-    else if (a < 0 && b >= 0 && c < 0) wtf_maker(a+1, b-1, c+1);
-    else if (a < 0 && b < 0 && c >= 0) wtf_maker(a+1, b+1, c-1);
+    if (a > 0 && b > 0 && c > 0) wtf_maker(a-1, b-1, c-1);
+    else if (a > 0 && b > 0 && c < 0) wtf_maker(a-1, b-1, c+1);
+    else if (a > 0 && b < 0 && c > 0) wtf_maker(a-1, b+1, c-1);
+    else if (a > 0 && b < 0 && c < 0) wtf_maker(a-1, b+1, c+1);
+    else if (a < 0 && b > 0 && c > 0) wtf_maker(a+1, b-1, c-1);
+    else if (a < 0 && b > 0 && c < 0) wtf_maker(a+1, b-1, c+1);
+    else if (a < 0 && b < 0 && c > 0) wtf_maker(a+1, b+1, c-1);
     else if (a < 0 && b < 0 && c < 0) wtf_maker(a+1, b+1, c+1);
     else if (a == 0 && b == 0 && c == 0) return 0;
     return 0;
@@ -74,36 +70,6 @@ class ExampleClass01
 -----------------
 
 image::screenshots/lizard01.png[]
-
-*Przykład nr 2:* zagnieżdżanie konstrukcji if-else
-
-.ExampleClass02.java
-[source,java]
------------------
-class ExampleClass02
-{
-  public static int wtf_maker(int a, int b, int c)
-  {
-    if (a > 0) { if (b > 0) wtf_maker(a-1,b-1,c); if (c > 0) wtf_maker(a-1,b,c-1); }
-    else if (b > 0) { if (a > 0) wtf_maker(a-1,b-1,c); if (c > 0) wtf_maker(a,b-1,c-1); }
-    else if (c > 0) { if (a > 0) wtf_maker(a-1,b,c-1); if (b > 0) wtf_maker(a,b-1,c-1); }
-
-    if (a < 0) { if (b < 0) wtf_maker(a+1,b+1,c); if (c < 0) wtf_maker(a+1,b,c+1); }
-    else if (b < 0) { if (a < 0) wtf_maker(a+1,b+1,c); if (c < 0) wtf_maker(a,b+1,c+1); }
-    else if (c < 0) { if (a < 0) wtf_maker(a+1,b,c+1); if (b < 0) wtf_maker(a,b+1,c+1); }
-
-    if (a == 0 && b == 0 && c == 0) return 0;
-    return 0;
-  }
-
-  public static void main (String[] args)
-  {
-    wtf_maker(10, 20, 30);
-  }
-}
------------------
-
-image::screenshots/lizard02.png[]
 
 Przytaczane są poniższe wartości złożoności cyklomatycznej:
 
