--- a/README.adoc
+++ b/README.adoc
@@ -46,35 +46,29 @@ W rezultacie wyznaczana jest niestabilność.
 .ExampleClass01.java
 [source,java]
 -----------------
-class ExampleClass01
-{
-  public static int wtf_maker(int a, int b, int c)                // 1 pkt (metoda)
-  {
-    if (a > 0 && b > 0 && c > 0) wtf_maker(a-1, b-1, c-1);        // 3 pkt (po 1 pkt za każde wyrażenie)
-    else if (a > 0 && b > 0 && c < 0) wtf_maker(a-1, b-1, c+1);   // 3 pkt (po 1 pkt za każde wyrażenie)
-    else if (a > 0 && b < 0 && c > 0) wtf_maker(a-1, b+1, c-1);   // 3 pkt (po 1 pkt za każde wyrażenie)
-    else if (a > 0 && b < 0 && c < 0) wtf_maker(a-1, b+1, c+1);   // 3 pkt (po 1 pkt za każde wyrażenie)
-    else if (a < 0 && b > 0 && c > 0) wtf_maker(a+1, b-1, c-1);   // 3 pkt (po 1 pkt za każde wyrażenie)
-    else if (a < 0 && b > 0 && c < 0) wtf_maker(a+1, b-1, c+1);   // 3 pkt (po 1 pkt za każde wyrażenie)
-    else if (a < 0 && b < 0 && c > 0) wtf_maker(a+1, b+1, c-1);   // 3 pkt (po 1 pkt za każde wyrażenie)
-    else if (a < 0 && b < 0 && c < 0) wtf_maker(a+1, b+1, c+1);   // 3 pkt (po 1 pkt za każde wyrażenie)
-    else if (a == 0 && b == 0 && c == 0) return 0;                // 3 pkt (po 1 pkt za każde wyrażenie)
-    return 0;
-  }                                                               // razem: 28 pkt
-
-  public static void main (String[] args)
-  {
-    wtf_maker(10, 20, 30);
-  }
-}
-
+// metoda zliczająca ilość potrzebnych kroków, aby wrócić do punktu (0,0,0)
+// przykładowe wykorzystanie: gra wykorzystująca układ współrzędnych
+int steps = 0;
+public static int count_steps(int x, int y, int z) {                           // 1 pkt (metoda)
+  if (x > 0 && y > 0 && z > 0) { steps += 3; count_steps(x-1, y-1, z-1); }     // 3 pkt : 1 pkt za if + po 1 pkt za "&&"
+  else if (x > 0 && y > 0 && z == 0) { steps += 2; count_steps(x-1, y-1, z); } // 3 pkt : 1 pkt za if + po 1 pkt za "&&"
+  else if (x > 0 && y == 0 && z > 0) { steps += 2; count_steps(x-1, y, z-1); } // 3 pkt : 1 pkt za if + po 1 pkt za "&&"
+  else if (x > 0 && y == 0 && z == 0) { steps += 1; count_steps(x-1, y, z); }  // 3 pkt : 1 pkt za if + po 1 pkt za "&&"
+  else if (x == 0 && y > 0 && z > 0) { steps += 2; count_steps(x, y-1, z-1); } // 3 pkt : 1 pkt za if + po 1 pkt za "&&"
+  else if (x == 0 && y > 0 && z == 0) { steps += 1; count_steps(x, y-1, z); }  // 3 pkt : 1 pkt za if + po 1 pkt za "&&"
+  else if (x == 0 && y == 0 && z > 0) { steps +=1;  count_steps(x, y, z-1);}   // 3 pkt : 1 pkt za if + po 1 pkt za "&&"
+  else if (x == 0 && y == 0 && z == 0) return steps;                           // 3 pkt : 1 pkt za if + po 1 pkt za "&&"
+}                                                                              // razem: 25 pkt
+// przykładowe wywołanie:
+// metoda zwraca ilość kroków z (10,20,15) do (0,0,0) najkrótszą drogą
+int steps = count_steps(10,20,15);
 -----------------
 
 image::screenshots/lizard01.png[]
 
-Przytaczane są poniższe wartości złożoności cyklomatycznej:
+Przytaczane są poniższe wartości złożoności cyklomatycznej (McCabe Cyclomatic Complexity - MCC):
 
-|=====================================================================================================================================================================================================================
-| *Zakres* | od 1 do 10                                    | od 11 do 20                                       | od 21 do 50                                    | powyżej 50
-| *Opis*   | kod dość prosty stwarzający nieznaczne ryzyko | kod złożony powodujący ryzyko na średnim poziomie | kod bardzo złożony związany z wysokim ryzykiem | kod niestabilny grożący bardzo wysokim poziomem ryzyka
-|=====================================================================================================================================================================================================================
+|=====================================================================================
+| *MCC*       | 1-10          | 11-20         | 21-50     | 51+
+| *Assesment* | not much risk | moderate risk | high risk | untestable, very high risk
+|=====================================================================================
