--- a/helper/info.adoc
+++ b/helper/info.adoc
@@ -182,7 +182,7 @@ propozycja zmiany :     new items
 
 * https://dzone.com/articles/code-smells-if-statements[Code Smells - If Statements]
 * https://www.quora.com/Why-should-Java-programmers-try-to-avoid-if-statements[Why should Java programmers try to avoid _if_ statements?]
-* https://edgecoders.com/coding-tip-try-to-code-without-if-statements-d06799eed231[Coding tip - try to code withoud _if_ statements]
+* https://edgecoders.com/coding-tip-try-to-code-without-if-statements-d06799eed231[Coding tip - try to code without _if_ statements]
 * http://ashtonkemerling.com/blog/2017/01/26/java-without-if/[Java without _if_]
 * https://www.pluralsight.com/blog/it-ops/if-statements[_If_ statements: Do you really need them in your code?]
 * and more...
